--- a/cities.html
+++ b/cities.html
@@ -24,18 +24,13 @@
     <hr />
 
     <ol>
-<<<<<<< HEAD
       <li>London (18,236,131)</li>
-=======
->>>>>>> 39e511af57f2485aa3ab0fc538ee0b5bb701d79e
       <li>Shanghai (17,836,133)</li>
       <li>Istanbul (13,854,740)</li>
       <li>Karachi (12,991,000)</li>
       <li>Mumbai (12,478,447)</li>
-<<<<<<< HEAD
-=======
       <li>Montreal (15,500,678)</li>
->>>>>>> 39e511af57f2485aa3ab0fc538ee0b5bb701d79e
+      <li>Toronto (15,500,678)</li>
     </ol>
   </body>
 </html>
