--- a/cities.html
+++ b/cities.html
@@ -31,6 +31,8 @@
       <li>Mumbai (12,478,447)</li>
       <li>Montreal (15,500,678)</li>
       <li>Toronto (15,500,678)</li>
+      <li>BC (15,500,678)</li>
+      <li>Alberta(15,500,678)</li>
     </ol>
   </body>
 </html>
