--- a/cities.html
+++ b/cities.html
@@ -33,6 +33,7 @@
       <li>Toronto (15,500,678)</li>
       <li>BC (15,500,678)</li>
       <li>Alberta(15,500,678)</li>
+      <li>Manitoba(15,500,678)</li>
     </ol>
   </body>
 </html>
