--- a/cities.html
+++ b/cities.html
@@ -34,6 +34,8 @@
       <li>BC (15,500,678)</li>
       <li>Alberta(15,500,678)</li>
       <li>Manitoba(15,500,678)</li>
+      <li>Regina (13,854,740)</li>
+      <li>Another change (13,854,740)</li>
     </ol>
   </body>
 </html>
