--- a/cities.html
+++ b/cities.html
@@ -32,6 +32,7 @@
       <li>Alberta(15,500,678)</li>
       <li>Manitoba(15,500,678)</li>
       <li>Regina (13,854,740)</li>
+      <li>TEsting city (13,854,740)</li>
     </ol>
   </body>
 </html>
