Kate adds 3 city lines

--- a/cities.html
+++ b/cities.html
@@ -22,6 +22,11 @@
     </p>
 
     <hr />
+    <ol>
+      <li>This is city 1</li>
+      <li>This is city 2</li>
+      <li>This is city 2</li>
+    </ol>
 
     <ol>
       <li>London (18,236,131)</li>
