--- a/cities.html
+++ b/cities.html
@@ -36,5 +36,11 @@
       <li>Regina (13,854,740)</li>
       <li>TEsting city (13,854,740)</li>
     </ol>
+
+
+
+    <li>BC (15,500,678)</li>
+    <li>Alberta(15,500,678)</li>
+    <li>Manitoba(15,500,678)</li>
   </body>
 </html>
