changes made again by rob

--- a/cities.html
+++ b/cities.html
@@ -47,5 +47,7 @@
     <li>BC (15,500,678)</li>
     <li>Alberta(15,500,678)</li>
     <li>Manitoba(15,500,678)</li>
+
+    <p>This is a new feature</p>
   </body>
 </html>
