--- a/cities.html
+++ b/cities.html
@@ -30,7 +30,6 @@
 
     <ol>
       <li>London (18,236,131)</li>
-     
     </ol>
 
     <ol>
@@ -43,10 +42,10 @@
       <li>random city (13,854,740)</li>
     </ol>
 
-
-
     <li>BC (15,500,678)</li>
     <li>Alberta(15,500,678)</li>
     <li>Manitoba(15,500,678)</li>
+    <li>Testing 1(15,500,678)</li>
+    <li>Testing 2(15,500,678)</li>
   </body>
 </html>
