Rob added promise

--- a/cities.html
+++ b/cities.html
@@ -45,12 +45,15 @@
     <li>BC (15,500,678)</li>
     <li>Alberta(15,500,678)</li>
     <li>Manitoba(15,500,678)</li>
-<<<<<<< HEAD
 
     <p>This is a new feature</p>
-=======
     <li>Testing 1(15,500,678)</li>
     <li>Testing 2(15,500,678)</li>
->>>>>>> 92da5ae4227d3b4199162301d0971232bb4f940f
+
+    <p>Thimoewe</p>
+    <li>TesThis is a promise)</li>
+    <li>Testing Again Again</li>
+
+
   </body>
 </html>
